# somafm-ubports

./: CMakeLists.txt  LICENSE  README.md  clickable.json  main.cpp  manifest.json  manifest.json.in  somafm.desktop.in
libs/ergo/: CMakeLists.txt
libs/ergo/src/: CMakeLists.txt  qmldir.in  units.cpp
libs/ergo/src/Ergo/: Action.qml  AdaptiveListItem.qml  AdaptiveToolbar.qml
libs/ergo/src/tests/: CMakeLists.txt  test-clipboard.cpp  test-units.cpp  test-unitythemeiconprovider.cpp
libs/ergo/style/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt
po/: somafm.wdehoog.pot
qml/: Main.qml
qml/components/: ChannelsDelegate.qml  ChannelsModel.qml  MessageDialog.qml  PageHeader.qml  PlayerArea.qml
qml/pages/: AboutPage.qml
